--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -27,13 +27,13 @@ sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL; \
 sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL; \
 opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL; \
 pidControllerToBpm,10,float,0,Dynamic,NULL,NULL; \
-sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL
+sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL;sessionControllertoUsbController,16,uint16_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL; \
 bpmTask,49,128,bpmCtrl,Default,NULL,Dynamic,NULL,NULL; \
 forceSensorTask,32,256,forceSensor,Default,NULL,Dynamic,NULL,NULL; \
 pidTask,40,256,pidController,Default,NULL,Dynamic,NULL,NULL; \
 opticalSensorTask,8,128,opticalSensor,Default,NULL,Dynamic,NULL,NULL; \
-sessionControllerTask,40,256,sessionController,Default,NULL,Dynamic,NULL,NULL
+sessionControllerTask,40,256,sessionController,Default,NULL,Dynamic,NULL,NULL;usbTask,24,256,startUsbTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configTOTAL_HEAP_SIZE=30720
@@ -58,7 +58,8 @@ Mcu.IP14=TIM13
 Mcu.IP15=TIM14
 Mcu.IP16=TIM16
 Mcu.IP17=USART1
-Mcu.IP18=USB_OTG_FS
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C4
@@ -67,7 +68,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SDMMC1
 Mcu.IP9=SPI1
-Mcu.IPNb=19
+Mcu.IPNb=20
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -128,11 +129,12 @@ Mcu.Pin58=VP_TIM13_VS_ClockSourceINT
 Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin60=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin61=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin62=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PI11
 Mcu.Pin8=PF6
 Mcu.Pin9=PF7
-Mcu.PinsNb=62
+Mcu.PinsNb=63
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -149,6 +151,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -419,7 +422,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM13_Init-TIM13-false-HAL-true,12-MX_ADC2_Init-ADC2-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_ADC3_Init-ADC3-false-HAL-true,15-MX_I2C4_Init-I2C4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM13_Init-TIM13-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC3_Init-ADC3-false-HAL-true,14-MX_I2C4_Init-I2C4-false-HAL-true,15-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -558,6 +561,10 @@ TIM2.IPParameters=Prescaler,AutoReloadPreload
 TIM2.Prescaler=200-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -576,6 +583,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
