--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -21,10 +21,10 @@ CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,configENABLE_FPU,configTOTAL_HEAP_SIZE
 FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL; lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL; sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL; sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL; sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL; opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL; pidControllerToBpm,10,float,0,Dynamic,NULL,NULL; sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL;sessionControllertoUsbController,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=usbTask,40,1024,usbTaskEntryFunction,As weak,NULL,Dynamic,NULL,NULL; bpmTask,40,128,bpmTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; forceSensorTask,32,256,forceSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; pidTask,40,256,pidControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; opticalSensorTask,32,128,opticalSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; sessionControllerTask,40,256,sessionControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;lcdDisplayTask,8,128,lcdDisplayTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;ledBlinkTask,8,128,ledBlinkTaskEntryFunction,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=usbTask,40,1024,usbTaskEntryFunction,As weak,NULL,Dynamic,NULL,NULL; bpmTask,40,128,bpmTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; forceSensorTask,32,256,forceSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; pidTask,40,256,pidControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL; opticalSensorTask,32,256,opticalSensorTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;sessionControllerTask,40,256,sessionControllerTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;lcdDisplayTask,16,256,lcdDisplayTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL;ledBlinkTask,8,128,ledBlinkTaskEntryFunction,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
-FREERTOS.configTOTAL_HEAP_SIZE=30720
+FREERTOS.configTOTAL_HEAP_SIZE=46080
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -349,7 +349,7 @@ PH7.Signal=GPIO_Output
 PI11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PI11.GPIO_Label=ADS1115_ALERT
 PI11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PI11.GPIO_PuPd=GPIO_PULLUP
+PI11.GPIO_PuPd=GPIO_NOPULL
 PI11.Locked=true
 PI11.Signal=GPXTI11
 PI4.GPIOParameters=GPIO_PuPd,GPIO_Label
